Fix overflow

--- a/smashBook/assets/scss/app/_layout.scss
+++ b/smashBook/assets/scss/app/_layout.scss
@@ -2,7 +2,6 @@ body,
 html,
 #__nuxt,
 #__layout {
-  min-height: 100%;
-  height: 100%;
   color: white;
+  overflow: hidden;
 }
